# massa-proto-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.bat  build.rs  build.sh
.github/workflows/: ci-cd.yaml  ci.yaml
rust/: .gitignore  Cargo.toml  build.rs
rust/src/: _includes.rs  google.rpc.rs  lib.rs
src/: _abi_includes.rs  _api_includes.rs  _commons_includes.rs  google.api.rs  lib.rs  massa.abi.v1.rs  massa.api.v1.rs  massa.model.v1.rs
