# Copyright (c) 2023 MASSA LABS <info@massa.net>

[package]
name = "massa_proto_rs"
version = "0.1.0"
edition = "2021"
description = "Protobuf rust bindings for the Massa blockchain"
repository = "https://github.com/massalabs/massa-proto/"
homepage = "https://massa.net"
documentation = "https://docs.massa.net/"

[lib]
name = "massa_proto_rs"

[dependencies]
prost = "=0.11.9"
prost-types = "=0.11.9"
tonic = "=0.9.2"

[build-dependencies]
glob = "0.3.1"
prost-build = "=0.11.9"
tonic-build = "=0.9.2"
