# Copyright (c) 2023 MASSA LABS <info@massa.net>

[package]
name = "massa-proto-rs"
version = "0.1.0"
edition = "2021"
description = "Protobuf Rust bindings for the Massa blockchain"
repository = "https://github.com/massalabs/massa-proto-rs/"
homepage = "https://massa.net"
documentation = "https://docs.massa.net/"

include = ["api.bin"]

[lib]
name = "massa_proto_rs"

[dependencies]
prost = "=0.13"
prost-types = "=0.13"
tonic = { version = "=0.12", optional = true }

[build-dependencies]
glob = "0.3"
prost-build = "=0.13"
tonic-build = "=0.12"

[features]
tonic-build = []
tonic = ["dep:tonic"] # enable or disable tonic support
